Fix error message being behind search

--- a/frontend/styles/global/error.css
+++ b/frontend/styles/global/error.css
@@ -25,6 +25,7 @@
   font-size: 25px;
   font-weight: 500;
   gap: 10px;
+  z-index: 10;
 }
 
 #error-button {
